# maithEngine

./: CMakeLists.txt  build.bat  build.sh  compile_commands.json  conanfile.txt
examples/2-hello-triangle/: main.cpp
examples/3-rectangle/: main.cpp
src/: main.cpp
